--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -30,7 +30,7 @@
 <!-- Cover Pic Box -->
 <div>
     <label>Cover</label>
-    <input type="file" name="cover">
+    <input type="file" name="cover" class="filepond">
 </div>
 <!-- Description Box -->
 <div>
