--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -1,12 +1,13 @@
-<!-- Title Box -->
-<div>
-    <label>Title</label>
-    <input type="text" name="title" value="<%= book.title %>">
-</div>
-<!-- Author Box -->
-<div>
-<label>Author</label>
-    <select name="author">
+<div class="form-row">
+    <div class="form-item">
+        <!-- Title Box -->
+        <label>Title</label>
+        <input type="text" name="title" value="<%= book.title %>">
+    </div>
+    <div class="form-item">
+        <!-- Author Box -->
+        <label>Author</label>
+        <select name="author">
         <% authors.forEach(author => { %>
             <% if (author.id === book.author) { %>
                 <option selected label = "<%= author.name %>" value="<%= author.id %>">
@@ -14,27 +15,35 @@
                 <option label = "<%= author.name %>" value="<%= author.id %>">
             <% } %>
         <% }) %>
-    </select>
+        </select>
+    </div>
 </div>
 <!-- Publish Date Box -->
-<div>
-    <label>Publish Date</label>
-    <input type="date" name="publishDate" 
-            value="<%= book.publishDate == null ? '' : book.publishDate.toISOString().split('T')[0] %>">
-</div>
-<!-- Page Count Box -->
-<div>
+<div class="form-row">
+    <div class="form-item">
+        <label>Publish Date</label>
+        <input type="date" name="publishDate" 
+                value="<%= book.publishDate == null ? '' : book.publishDate.toISOString().split('T')[0] %>">
+    </div>
+    <!-- Page Count Box -->
+    <div class="form-item">
     <label>Page Count</label>
     <input type="number" name="pageCount" min="1" value="<%= book.pageCount %>">
+    </div>
 </div>
-<!-- Cover Pic Box -->
-<div>
-    <label>Cover</label>
-    <input type="file" name="cover" class="filepond">
+
+<div class="form-row">
+    <!-- Cover Pic Box -->
+    <div class="form-item form-item-no-grow">
+        <label>Cover</label>
+        <input type="file" name="cover" class="filepond">
+    </div>
+    <!-- Description Box -->
+    <div class="form-item">
+        <label>Description</label>
+        <textarea name="description"><%= book.description %></textarea>
+    </div>
 </div>
-<!-- Description Box -->
-<div>
-    <label>Description</label>
-    <textarea name="description"><%= book.description %></textarea>
-</div>
+
+
 
