--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -36,7 +36,7 @@
     <!-- Cover Pic Box -->
     <div class="form-item form-item-no-grow">
         <label>Cover</label>
-        <input type="file" name="cover" class="filepond">
+        <input type="file" name="cover" class="book-cover filepond">
     </div>
     <!-- Description Box -->
     <div class="form-item">
